--- a/src/global.css
+++ b/src/global.css
@@ -3,7 +3,8 @@
   font-style: normal;
   font-weight: 100 900;
   font-display: auto;
-  src: url('/fonts/SantLipi-VF.woff2') format('woff2-variations'),
+  src:
+    url('/fonts/SantLipi-VF.woff2') format('woff2-variations'),
     url('/fonts/SantLipi-VF.woff2') format('woff2');
   unicode-range: U+0964-0965, U+2080-2089, U+262C, U+25CC, U+0A00-0A76,
     U+A830-A835;
@@ -108,9 +109,21 @@
 }
 
 body {
-  font-family: 'Sant Lipi', system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family:
+    'Sant Lipi',
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
   font-size: 16px;
   line-height: 1.5;
   margin: 0;
@@ -216,8 +229,15 @@ pre {
 }
 
 code {
-  font-family: 'Sant Lipi', ui-monospace, SFMono-Regular, SF Mono, Menlo,
-    Consolas, Liberation Mono, monospace;
+  font-family:
+    'Sant Lipi',
+    ui-monospace,
+    SFMono-Regular,
+    SF Mono,
+    Menlo,
+    Consolas,
+    Liberation Mono,
+    monospace;
   font-size: 0.9em;
   background-color: var(--toner);
   padding: 0.2em 0.4em;
@@ -290,7 +310,9 @@ select:focus {
 
 select {
   background-color: var(--bg);
-  transition: background-color 0.25s ease, color 0.25s ease;
+  transition:
+    background-color 0.25s ease,
+    color 0.25s ease;
   border-radius: 25px;
   padding: 2px 12px;
   border: 0.5px solid var(--toner);
@@ -298,9 +320,21 @@ select {
   font-weight: 500;
   text-align: center;
   color: var(--link);
-  font-family: 'Sant Lipi', system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family:
+    'Sant Lipi',
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
 }
 
 input[type='range'] {
