--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -15,9 +15,21 @@
   box-sizing: border-box;
   background-color: var(--bg-base);
   color: var(--fg);
-  font-family: 'Sant Lipi', system-ui, -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family:
+    'Sant Lipi',
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    'Roboto',
+    'Oxygen',
+    'Ubuntu',
+    'Cantarell',
+    'Fira Sans',
+    'Droid Sans',
+    'Helvetica Neue',
+    Arial,
+    sans-serif;
   font-weight: 500;
   font-size: 1rem;
 }
