--- a/src/components/app/controls/controls.css
+++ b/src/components/app/controls/controls.css
@@ -62,18 +62,6 @@
 .modal__article {
   overscroll-behavior: contain;
   overflow-y: scroll;
-  -webkit-mask-image: linear-gradient(
-    to bottom,
-    transparent 0px,
-    black 24px calc(100% - 24px),
-    transparent 100%
-  );
-  mask-image: linear-gradient(
-    to bottom,
-    transparent 0%,
-    black 24px calc(100% - 24px),
-    transparent 100%
-  );
 }
 
 .modal__article::-webkit-scrollbar {
@@ -96,11 +84,9 @@
   position: absolute;
   right: 25px;
   top: 25px;
-  width: 35px;
-  height: 20px;
-  border-radius: 20px;
-  font-size: 20px;
-  padding: 2px;
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
   line-height: 1;
   background-color: var(--bg);
   display: flex;
@@ -125,7 +111,7 @@
   color: var(--link-hover);
 }
 
-.interface__option {
+.controls__option {
   display: flex;
   align-items: center;
   gap: 0.4em;
@@ -133,16 +119,21 @@
   user-select: none;
 }
 
-a.interface__option:hover {
+.controls__label {
+  gap: 0.6em;
+  display: flex;
+  align-items: center;
+}
+
+a.controls__option:hover {
   text-decoration: none;
 }
 
-.interface__icon {
-  width: 35px;
-  height: 20px;
+.controls__icon {
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
   font-size: 20px;
-  padding: 2px;
-  border-radius: 20px;
   line-height: 1;
   background-color: var(--bg);
   display: flex;
@@ -155,17 +146,52 @@ a.interface__option:hover {
     color 0.25s ease;
 }
 
-.interface__option.clickable {
+.controls__option.clickable {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
 }
 
-:global(.interface__option.clickable:hover .switch) {
+:global(.controls__option.clickable:hover .switch) {
   --track-color-inactive: var(--toner) !important;
 }
 
-.interface__option.clickable:hover .interface__icon {
+.controls__option.clickable:hover .controls__icon {
   background-color: var(--toner);
+}
+
+.controls__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1em;
+  margin-top: 0.75em;
+}
+
+.controls__card {
+  color: var(--fg);
+  box-sizing: border-box;
+  text-align: center;
+  font-weight: 540;
+  font-size: 0.75em;
+  padding: 0.25em 0.75em;
+  background: var(--bg);
+  border-radius: 0.6em;
+  border: 0.5px solid var(--toner);
+  transition:
+    background-color 0.25s ease,
+    color 0.25s ease;
+  overflow: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
+}
+
+.controls__card:hover {
+  color: var(--link-hover);
+  text-decoration: none;
+  background-color: var(--toner);
+}
+
+.controls__card__active {
+  color: var(--link);
 }
 
 @media (pointer: fine) {
@@ -186,6 +212,12 @@ a.interface__option:hover {
 }
 
 @media (pointer: coarse) {
+  .controls__card {
+    display: block;
+    padding: 0.75em 0.75em;
+    min-height: 35px;
+    min-width: 35px;
+  }
   .modal {
     animation:
       fade-in-and-up 0.6s ease,
@@ -197,15 +229,15 @@ a.interface__option:hover {
   }
   .modal__close {
     right: 25px;
-    top: 12.5px;
+    top: 16.25px;
     width: 35px;
     height: 35px;
-    border-radius: 40px;
+    border-radius: 35px;
   }
-  .interface__icon {
-    width: 60px;
-    height: 40px;
-    border-radius: 40px;
+  .controls__icon {
+    width: 35px;
+    height: 35px;
+    border-radius: 35px;
   }
   @media (max-device-width: 480px) {
     .modal {
