--- a/src/components/app/header/header.css
+++ b/src/components/app/header/header.css
@@ -24,7 +24,7 @@ header {
   font-size: 16px;
   opacity: 1;
   transition: opacity 240ms ease 160ms;
-  max-width: 100%;
+  width: 100%;
 }
 
 .hide > header {
