--- a/src/global.css
+++ b/src/global.css
@@ -28,28 +28,24 @@
     --fg-muted: rgb(57.57% 56.58% 54.63%);
     --bg: #f5f3f0;
     --bg-base: #fff;
-    --blue: rgb(0% 48.81% 81.83%);
+    --ui: rgb(0% 48.81% 81.83%);
     --link: #2c64c4;
     --link-hover: #4395f7;
-    --teal: rgb(0% 52.14% 55.32%);
-    --red: rgb(83.05% 24% 29.82%);
     --heavy-vishraam: rgb(55.17% 30% 13.76%);
     --medium-vishraam: rgb(9.32% 42.55% 19.52%);
     --light-vishraam: rgb(53% 27.31% 53.51%);
   }
 
   @media (dynamic-range: high) {
-    @supports (color: lch(0 0 0)) {
+    @supports (color: oklch(0 0 0)) {
       :root {
         --fg: lch(4% 2 85);
         --fg-muted: lch(40% 2 85);
         --bg: lch(96% 2 85);
         --bg-base: lch(100% 0 0);
-        --blue: lch(50% 66 265);
+        --ui: lch(50% 66 265);
         --link: lch(40% 66 265);
         --link-hover: lch(60% 66 265);
-        --teal: lch(50% 66 205);
-        --red: lch(50% 66 25);
         --heavy-vishraam: lch(40% 44 55);
         --medium-vishraam: lch(40% 44 145);
         --light-vishraam: lch(40% 44 295);
@@ -61,18 +57,16 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --toner: rgba(var(--white-rgb) / var(--alpha-8));
-    --fg: rgb(79.55% 77.27% 77.12%);
-    --fg-muted: rgb(58.17% 56.26% 56.14%);
-    --bg: rgb(18.36% 16.88% 17.38%);
-    --bg-base: rgb(13.15% 13.15% 13.15%);
-    --blue: rgb(11.18% 48.69% 80.05%);
-    --link: rgb(44.17% 57.86% 77.28%);
-    --link-hover: rgb(65.49% 79% 99.57%);
-    --teal: rgb(0% 52.14% 55.32%);
-    --red: rgb(75.42% 32.24% 33.73%);
-    --heavy-vishraam: rgb(77.58% 49.59% 32.13%);
-    --medium-vishraam: rgb(32.15% 63.1% 38.26%);
-    --light-vishraam: rgb(57.99% 53% 84.46%);
+    --fg: rgb(188, 181, 181);
+    --fg-muted: rgb(151, 144, 144);
+    --bg: #0f0f0f;
+    --bg-base: rgb(33, 33, 33);
+    --ui: rgb(73, 124, 253);
+    --link: rgb(128, 157, 221);
+    --link-hover: rgb(149, 182, 255);
+    --heavy-vishraam: rgb(198, 145, 110);
+    --medium-vishraam: rgb(127, 172, 128);
+    --light-vishraam: rgb(162, 149, 203);
   }
 
   ::selection {
@@ -85,24 +79,22 @@
   }
 
   @media (dynamic-range: high) {
-    @supports (color: lch(0 0 0)) {
+    @supports (color: oklch(0 0 0)) {
       :root {
-        --fg: lch(80% 2 25);
-        --fg-muted: lch(60% 2 25);
-        --bg: lch(18% 2 355);
-        --bg-base: lch(13% 1 355);
-        --blue: lch(50% 50 265);
-        --link: lch(60% 40 265);
-        --link-hover: lch(80% 40 265);
-        --teal: lch(50% 50 205);
-        --red: lch(50% 50 25);
-        --heavy-vishraam: lch(60% 44 55);
-        --medium-vishraam: lch(60% 44 145);
-        --light-vishraam: lch(60% 44 295);
+        --fg: oklch(78% 2% 25);
+        --fg-muted: oklch(66% 2% 25);
+        /* skip bg until theme_color supports dynamic range */
+        --bg-base: oklch(24.84% 0% 355);
+        --ui: oklch(62% 40% 265);
+        --link: oklch(70% 25% 265);
+        --link-hover: oklch(78% 40% 265);
+        --heavy-vishraam: oklch(70% 20% 55);
+        --medium-vishraam: oklch(70% 20% 145);
+        --light-vishraam: oklch(70% 20% 295);
       }
 
       ::selection {
-        background: lch(80% 70 80 / 40%);
+        background: oklch(62% 50% 265 / 40%);
       }
     }
   }
@@ -292,12 +284,12 @@ blockquote > *:last-child {
 
 input,
 select {
-  accent-color: var(--blue);
+  accent-color: var(--ui);
   cursor: pointer;
   margin: 0;
   appearance: none;
   -webkit-appearance: none;
-  background-color: var(--bg);
+  background-color: var(--toner);
   transition:
     background-color 0.25s ease,
     color 0.25s ease;
@@ -344,15 +336,16 @@ select:focus {
 
 input:focus,
 select:focus {
-  outline: 2px solid var(--link-hover);
-  outline-offset: -0.5px;
+  outline: 2.25px solid var(--ui);
+  outline-offset: 2.25px;
 }
 
 input[type='search']:hover,
 input[type='search']:focus {
-  background-color: var(--bg-base);
+  background-color: var(--toner);
   color: var(--fg);
-  outline: 2px solid var(--link-hover);
+  outline: 2.25px solid var(--ui);
+  outline-offset: 2.25px;
 }
 
 input[type='range'] {
@@ -366,12 +359,13 @@ input[type='range'] {
   border: 0.5px solid var(--toner);
   box-sizing: content-box;
   padding: 0;
-  background: var(--bg);
+  background: var(--toner);
 }
 
+input[type='range']:hover,
 input[type='range']:focus {
-  outline: 2px solid var(--link-hover);
-  outline-offset: -0.5px;
+  outline: 2.25px solid var(--ui);
+  outline-offset: 2.25px;
 }
 
 input[type='range']::-webkit-slider-runnable-track {
@@ -399,7 +393,7 @@ input[type='range']::-webkit-slider-thumb {
   height: 24px;
   width: 24px;
   border-radius: 24px;
-  box-shadow: -412px 0 0 400px var(--blue);
+  box-shadow: -412px 0 0 400px var(--ui);
 }
 input[type='range']::-moz-range-thumb {
   -webkit-appearance: none;
@@ -408,12 +402,12 @@ input[type='range']::-moz-range-thumb {
   height: 24px;
   width: 24px;
   border-radius: 24px;
-  box-shadow: -412px 0 0 400px var(--blue);
+  box-shadow: -412px 0 0 400px var(--ui);
 }
 
 input[type='range']:focus::-webkit-slider-thumb {
-  outline: 2px solid var(--toner);
-  outline-offset: -2px;
+  outline: 2.25px solid var(--toner);
+  outline-offset: -2.25px;
 }
 
 input[type='range']:focus::-moz-range-thumb {
@@ -483,13 +477,13 @@ input[type='range']:focus::-moz-range-thumb {
     width: 35px;
     height: 35px;
     border-radius: 35px;
-    box-shadow: -419px 0 0 400px var(--blue);
+    box-shadow: -419px 0 0 400px var(--ui);
   }
   input[type='range']::-moz-range-thumb {
     width: 35px;
     height: 35px;
     border-radius: 35px;
-    box-shadow: -419px 0 0 400px var(--blue);
+    box-shadow: -419px 0 0 400px var(--ui);
   }
 }
 
