--- a/src/components/app/header/header.css
+++ b/src/components/app/header/header.css
@@ -2,6 +2,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   background: inherit;
   z-index: 4;
   position: sticky;
@@ -10,6 +11,7 @@
   transition: transform 400ms ease;
   color: var(--fg);
   height: calc(3.5em - 0.5px);
+  font-size: 16px;
 }
 
 .border {
@@ -21,7 +23,6 @@
 }
 
 header {
-  font-size: 16px;
   opacity: 1;
   transition: opacity 240ms ease 160ms;
   width: 100%;
@@ -43,6 +44,7 @@ header > div {
   /* grid-template-columns: 1fr auto 1fr; */
   align-items: center;
   container-type: inline-size;
+  padding: 0 12px;
 }
 
 header ul {
@@ -51,7 +53,6 @@ header ul {
   padding: 0;
   list-style: none;
   text-align: right;
-  padding-right: 12px;
 }
 
 header li {
@@ -62,34 +63,31 @@ header li {
 
 header a {
   color: inherit;
-  opacity: var(--alpha-80);
-  padding: 0 24px;
-  min-height: 60px;
-  min-width: 12px; /* 60 - 2*padding */
+  padding: 8px 12px;
   display: flex;
+  border-radius: 8px;
   align-items: center;
   justify-content: center;
-  transition: ease-in-out 125ms;
   gap: 0.4em;
+  outline-offset: 2.25px;
 }
 
 header a:hover {
-  opacity: 1;
   text-decoration: none;
-  transform: scale(1.05);
+  outline: 2.25px solid var(--ui);
 }
 
 header .logo {
   display: flex;
-  gap: 0em;
+  gap: 0.33em;
   align-items: center;
-  font-size: 1.25em;
-  font-weight: 300;
-  padding-left: 18px;
+  font-size: 1.15em;
+  font-weight: 400;
+  letter-spacing: -0.5px;
 }
 
 header .lotus {
-  height: 2em;
+  height: 24px;
 }
 
 @media (display-mode: window-controls-overlay) {
