--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -114,6 +114,24 @@ html[data-mode='saral'] .end-of-pauri:after {
   display: block;
 }
 
+html[data-larivar='1'][data-mode='reader'] article p.bold::before,
+html[data-larivar='1'][data-mode='reader'] .title + .line:not(.title)::before,
+html[data-larivar='1'][data-mode='saral'] .title + .line:not(.title)::before,
+html[data-larivar='1'][data-mode='reader'] .end-of-pauri:after {
+  content: '';
+  display: inline-block;
+}
+
+html[data-larivar='1'][data-mode='saral'] .line,
+html[data-larivar='1'][data-mode='reader'] .title,
+html[data-larivar='1'][data-mode='saral'] .title {
+  display: inline;
+  font-size: 1em;
+}
+html[data-larivar='1'] .title > p.bold {
+  font-weight: 450;
+}
+
 html[data-mode='presenter'] .app > div > article {
   height: calc(100vh - 56px);
   scroll-snap-type: y mandatory;
