--- a/src/global.css
+++ b/src/global.css
@@ -323,6 +323,8 @@ input[type='search'],
 input[type='text'] {
   background-color: var(--bg-base);
   color: var(--fg);
+  padding: 12px 20px;
+  border-radius: 24px;
 }
 
 input:hover,
@@ -331,20 +333,14 @@ select:hover,
 select:focus {
   background-color: var(--toner);
   color: var(--link-hover);
-}
-
-input:focus,
-select:focus {
   outline: 2.25px solid var(--ui);
   outline-offset: 2.25px;
 }
 
 input[type='search']:hover,
 input[type='search']:focus {
-  background-color: var(--toner);
+  background-color: var(--bg-base);
   color: var(--fg);
-  outline: 2.25px solid var(--ui);
-  outline-offset: 2.25px;
 }
 
 input[type='range'] {
@@ -451,13 +447,6 @@ input[type='range']:focus::-moz-range-thumb {
   input[type='search'] {
     width: 100%;
     text-align: center;
-  }
-
-  input[type='search'],
-  input[type='text'],
-  select {
-    padding: 10px 12px;
-    border-radius: 40px;
   }
 
   input[type='range'] {
