--- a/src/components/line/line.css
+++ b/src/components/line/line.css
@@ -1,6 +1,5 @@
 .line {
   font-size: 1rem;
-  line-height: 1.5;
   margin-bottom: 0;
   /* color: inherit;
   border-radius: 0.4em;
@@ -33,9 +32,8 @@ p {
 
 .bold {
   opacity: 1;
-  font-weight: 450;
-  font-size: 1.15rem;
-  line-height: 1.3;
+  font-size: 1.75em;
+  line-height: 1.25;
 }
 
 .heavy {
