--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -36,12 +36,11 @@
     Arial,
     sans-serif;
   font-weight: 450;
-  font-size: 1rem;
+  font-size: 1.5rem; /* 1.75 of p.bold divided by gurmukhi:latin ratio of roughly 1.15 */
 }
 
 html[data-mode='presenter'] .notes-pane {
   text-align: center;
-  font-weight: 700;
 }
 
 .notes-pane::-webkit-scrollbar {
@@ -82,15 +81,10 @@ html[data-mode='saral'] .title {
   font-size: 1.25em;
 }
 
-html[data-mode='reader'] .title > p,
-html[data-mode='saral'] .title > p {
-  line-height: 1.2;
-}
-
 html[data-mode='reader'] .title > p.bold,
 html[data-mode='saral'] .title > p.bold {
   font-weight: 300;
-  font-size: 1.15em;
+  line-height: 1.2;
 }
 
 html[data-mode='reader'] .line:not(.title) + .title,
@@ -129,7 +123,7 @@ html[data-larivar='1'][data-mode='saral'] .title {
   font-size: 1em;
 }
 html[data-larivar='1'] .title > p.bold {
-  font-weight: 450;
+  font-weight: 420;
 }
 
 html[data-mode='presenter'] .app > div > article {
@@ -155,11 +149,6 @@ html[data-mode='presenter'] .line {
   gap: 0.5em;
   scroll-snap-align: start;
   scroll-snap-stop: always;
-}
-
-html[data-mode='presenter'] p.bold {
-  font-size: 1.75em;
-  line-height: 1.25;
 }
 
 @media (max-device-width: 480px) {
