--- a/src/routes/hukamnama.css
+++ b/src/routes/hukamnama.css
@@ -16,13 +16,21 @@ html {
   margin-bottom: 0;
   display: grid;
   grid-template-columns: 1fr 1.5fr 1fr;
-  gap: 0.5rem;
+  gap: 0.75rem;
   text-align: center;
-  padding: 0 1rem;
+  padding: 0.75rem 0.75rem;
 }
 
 .header {
-  padding-top: 1rem;
+  --progress-bar-size: 4px;
+  position: sticky;
+  top: 0px;
+  background: var(--bg-base);
+  padding-top: var(--progress-bar-size);
+}
+
+.header .line {
+  padding: 0.25rem 0.75rem;
 }
 
 .line:nth-child(even) {
@@ -36,4 +44,14 @@ p {
 p,
 div {
   align-self: center;
+}
+
+.progress-bar {
+  opacity: 0.4;
+  position: relative;
+  top: calc(var(--progress-bar-size) / 2);
+  height: var(--progress-bar-size);
+  border-radius: var(--progress-bar-size);
+  width: 0%;
+  background-color: var(--ui);
 }
