--- a/src/routes/hukamnama.css
+++ b/src/routes/hukamnama.css
@@ -1,55 +1,77 @@
-html {
-  font-size: 20px;
-}
-
 .qrcode {
   display: inline-block;
-  height: 10rem;
-  width: 10rem;
+  height: 10vh;
+  width: 10vh;
   position: fixed;
-  bottom: 1.5rem;
-  right: 1.5rem;
+  bottom: 1.25rem;
+  left: 12.34vw;
+  z-index: 1000;
+  border-radius: 0.75rem;
+  background: var(--bg-base);
+  padding: 0.1875rem;
 }
 
+.header,
+.larivar,
 .line {
-  font-size: 1rem;
-  margin-bottom: 0;
-  display: grid;
-  grid-template-columns: 1fr 1.5fr 1fr;
-  gap: 0.75rem;
-  text-align: center;
   padding: 0.75rem 0.75rem;
+  text-align: center;
 }
 
 .header {
-  --progress-bar-size: 4px;
-  position: sticky;
-  top: 0px;
-  background: var(--bg-base);
-  padding-top: var(--progress-bar-size);
+  height: calc(10vh + 0.75rem - 2px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.header .line {
-  padding: 0.25rem 0.75rem;
+.hukamnama {
+  display: grid;
+  grid-template-columns: 5fr 11fr;
+}
+
+.larivar,
+.exposition {
+  overflow-y: auto;
+  scrollbar-width: none;
+}
+
+.larivar {
+  height: calc(90vh - 3rem - 2px - 3rem - 3.5rem);
+  font-size: 1.5rem;
+  font-weight: 600;
+  line-break: anywhere;
+  background: var(--bg-base);
+  background: linear-gradient(var(--bg-base), rgba(var(--white-rgb) / 0.6));
+  border-radius: 0.75rem;
+  margin: 0 1.5rem 0.75rem;
+}
+
+.exposition {
+  height: calc(100vh - 3rem);
+  margin-right: 1.5rem;
+  border-radius: 0.75rem;
+  position: relative;
+  top: 1.5rem;
 }
 
 .line:nth-child(even) {
   background-color: rgba(var(--black-rgb) / 0.04);
 }
 
+.line:nth-child(odd) {
+  background-color: rgba(var(--white-rgb) / 0.4);
+}
+
 p {
   font-weight: 600;
 }
 
-p,
-div {
-  align-self: center;
-}
-
 .progress-bar {
+  --progress-bar-size: 4px;
   opacity: 0.4;
-  position: relative;
-  top: calc(var(--progress-bar-size) / 2);
+  position: sticky;
+  top: 0;
   height: var(--progress-bar-size);
   border-radius: var(--progress-bar-size);
   width: 0%;
