--- a/src/components/app/header/header.css
+++ b/src/components/app/header/header.css
@@ -3,19 +3,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: inherit;
-  z-index: 4;
+  background: transparent;
+  z-index: 2;
   position: sticky;
   top: 0;
   margin: 0 auto;
   transition: transform 400ms ease;
   color: var(--fg);
-  height: calc(3.5em - 0.5px);
+  height: calc(3.5em);
   font-size: 16px;
-}
-
-.border {
-  border-bottom: 0.5px solid var(--toner);
 }
 
 .hide {
@@ -38,6 +34,7 @@ header * {
 }
 
 header > div {
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
@@ -47,47 +44,56 @@ header > div {
   padding: 0 12px;
 }
 
-header ul {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-align: right;
-}
-
-header li {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
+header nav {
+  display: flex;
+  flex-direction: row;
+  gap: 0.4em;
 }
 
 header a {
   color: inherit;
-  padding: 8px 12px;
+  padding: 8px;
   display: flex;
-  border-radius: 8px;
+  border-radius: 24px;
   align-items: center;
   justify-content: center;
   gap: 0.4em;
-  outline-offset: 2.25px;
+  outline-offset: -2.25px;
+}
+
+.scrolled a {
+  background: rgba(var(--bg-base-values) / 0.92);
+  backdrop-filter: blur(4px);
+}
+
+@media (dynamic-range: high) {
+  @supports (color: oklch(0 0 0)) {
+    .scrolled a {
+      background: lch(var(--bg-base-values) / 0.92);
+    }
+  }
 }
 
 header a:hover {
   text-decoration: none;
   outline: 2.25px solid var(--ui);
+  background: var(--ui-toner);
 }
 
 header .logo {
+  padding: 5px 0;
+  padding-left: 8px;
+  padding-right: 12px;
   display: flex;
   gap: 0.33em;
   align-items: center;
   font-size: 1.15em;
   font-weight: 400;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.25px;
 }
 
 header .lotus {
-  height: 24px;
+  height: calc(16px * 1.6); /* whatever rem is supposed to be */
 }
 
 @media (display-mode: window-controls-overlay) {
@@ -111,48 +117,5 @@ header .lotus {
   }
   header .lotus {
     display: none;
-  }
-}
-
-@media (pointer: coarse) and (max-device-width: 480px) {
-  .label {
-    display: none;
-  }
-}
-
-@media (pointer: coarse) {
-  @container (max-width: 540px) {
-    .label {
-      display: none;
-    }
-  }
-}
-
-@media (pointer: fine) {
-  @media (max-width: 720px) {
-    .label {
-      display: none;
-    }
-    @media (max-width: 501px) {
-      header .logo {
-        font-size: 0px;
-      }
-
-      header .lotus {
-        height: inherit;
-      }
-    }
-  }
-
-  @container (max-width: 540px) {
-    .label {
-      display: none;
-    }
-  }
-
-  @container (max-width: 450px) {
-    header .logo span {
-      display: none;
-    }
   }
 }
