--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,28 @@
-header {
-  top: 0;
-  position: sticky;
-  background: inherit;
+.header__container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--bg);
   z-index: 4;
+  position: sticky;
+  top: 0;
+  margin: 0 auto;
+  transition: transform 400ms ease;
+  color: var(--fg);
+  height: calc(3.5em);
   font-size: 16px;
+}
+
+header {
+  opacity: 1;
+  transition: opacity 240ms ease 160ms;
+  width: 100%;
+}
+
+.hide > header {
+  opacity: 0;
+  transition: opacity 120ms linear;
 }
 
 header * {
@@ -11,13 +30,14 @@ header * {
 }
 
 header > div {
-  height: 3.5em;
+  width: 100%;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   /* grid-template-columns: 1fr auto 1fr; */
   align-items: center;
   container-type: inline-size;
+  padding: 0 12px;
 }
 
 header ul {
@@ -26,7 +46,6 @@ header ul {
   padding: 0;
   list-style: none;
   text-align: right;
-  padding-right: 12px;
 }
 
 header li {
@@ -36,22 +55,20 @@ header li {
 }
 
 header a {
-  color: var(--fg);
-  opacity: var(--alpha-80);
-  padding: 0 24px;
-  min-height: 60px;
-  min-width: 12px; /* 60 - 2*padding */
+  color: inherit;
+  padding: 8px 12px;
   display: flex;
+  border-radius: 24px;
   align-items: center;
   justify-content: center;
-  transition: ease-in-out 125ms;
   gap: 0.4em;
+  outline-offset: -2.25px;
 }
 
 header a:hover {
-  opacity: 1;
   text-decoration: none;
-  transform: scale(1.05);
+  outline: 2.25px solid var(--ui);
+  background: var(--ui-toner);
 }
 
 header .logo {
@@ -60,23 +77,11 @@ header .logo {
   align-items: center;
   font-size: 1.15em;
   font-weight: 400;
-  letter-spacing: -0.5px;
+  letter-spacing: -0.25px;
 }
 
 header .lotus {
-  height: 24px;
-}
-
-@media (prefers-color-scheme: light) {
-  header {
-    background-color: #e0dadc; /*  lch(88% 3 355)*/
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  header {
-    background-color: #2b1d22; /* lch(10% 11 355) */
-  }
+  height: calc(16px * 1.6); /* whatever rem is supposed to be */
 }
 
 @media (display-mode: window-controls-overlay) {
