--- a/src/routes/hukamnama/layout.css
+++ b/src/routes/hukamnama/layout.css
@@ -3,23 +3,23 @@
   height: 10vh;
   width: 10vh;
   position: fixed;
-  bottom: 1.25rem;
+  bottom: 1.25em;
   left: 12.34vw;
   z-index: 1000;
-  border-radius: 0.75rem;
+  border-radius: 0.75em;
   background: var(--bg-base);
-  padding: 0.1875rem;
+  padding: 0.1875em;
 }
 
 .header,
 .hukam,
 .line {
-  padding: 0.75rem 0.75rem;
+  padding: 0.75em 0.75em;
   text-align: center;
 }
 
 .header {
-  height: calc(10vh + 0.75rem - 2px);
+  height: calc(10vh + 0.75em - 2px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,13 +37,13 @@
 }
 
 .hukam {
-  height: calc(90vh - 3rem - 2px - 3rem - 3.5rem);
-  font-size: 1.5rem;
+  height: calc(90vh - 3em - 2px - 3em - 3.5em);
+  font-size: 1.5em;
   font-weight: 600;
   background: var(--bg-base);
   background: linear-gradient(var(--bg-base), rgba(var(--white-rgb) / 0.6));
-  border-radius: 0.75rem;
-  margin: 0 1.5rem 0.75rem;
+  border-radius: 0.75em;
+  margin: 0 1.5em 0.75em;
 }
 
 .hukam__larivar {
@@ -51,11 +51,11 @@
 }
 
 .exposition {
-  height: calc(100vh - 3rem);
-  margin-right: 1.5rem;
-  border-radius: 0.75rem;
+  height: calc(100vh - 3em);
+  margin-right: 1.5em;
+  border-radius: 0.75em;
   position: relative;
-  top: 1.5rem;
+  top: 1.5em;
 }
 
 .line:nth-child(even) {
@@ -74,7 +74,7 @@ p {
   --progress-bar-size: 3px;
   opacity: 0.4;
   position: relative;
-  top: -0.75rem;
+  top: -0.75em;
   height: var(--progress-bar-size);
   border-radius: var(--progress-bar-size);
   width: 0%;
