--- a/src/components/line/line.css
+++ b/src/components/line/line.css
@@ -26,14 +26,31 @@
 
 p {
   opacity: 0.6;
-  font-weight: 400;
+
+  font-weight: calc(100 + 250 * var(--primary-factor));
+  line-height: 1.6;
+}
+
+.vicar {
+  --font-size: 1.1;
+  font-size: calc(1em * var(--font-size));
+  /* font-weight: calc(600 / var(--font-size)); */
+  font-weight: calc(
+    (100 + 250 * var(--primary-factor)) * (0.7 + 0.15 * var(--primary-factor))
+  );
+  line-height: calc(1.6 / var(--font-size));
 }
 
 .bold {
   opacity: 1;
-  font-size: 1.75em;
-  line-height: 1.25;
-  font-weight: 500;
+
+  --font-size: 1.1;
+  font-size: calc(1em * var(--primary-factor) * var(--font-size));
+  font-weight: calc(
+    (100 + 250 * var(--primary-factor)) * (0.7 + 0.15 * var(--primary-factor)) /
+      4 * 5
+  );
+  line-height: calc(1.6 / var(--font-size));
 }
 
 .heavy {
