--- a/src/global.css
+++ b/src/global.css
@@ -14,106 +14,97 @@
 :root {
   --isLTR: 1;
 
-  --black-rgb: 0% 0% 0%;
-  --white-rgb: 100% 100% 100%;
+  color-scheme: light dark;
 
-  --alpha-8: 8%;
-  --alpha: 40%;
-  --alpha-80: 80%;
+  --toner: light-dark(rgba(0% 0% 0% / 0.08), rgba(100% 100% 100% / 0.08));
+
+  --fg: light-dark(rgb(8.33% 7.46% 5.52%), rgb(100% 100% 100%));
+  --fg-muted: light-dark(rgb(57.57% 56.58% 54.63%), rgb(67% 67% 67%));
+
+  --bg: light-dark(rgb(96.078% 95.294% 94.118%), rgb(0% 0% 0%));
+  --bg-sheer: light-dark(
+    rgba(96.078% 95.294% 94.118% / 4%),
+    rgba(0% 0% 0% / 4%)
+  );
+  --bg-gauzy: light-dark(
+    rgba(96.078% 95.294% 94.118% / 12%),
+    rgba(0% 0% 0% / 12%)
+  );
+  --bg-hazy: light-dark(
+    rgba(96.078% 95.294% 94.118% / 40%),
+    rgba(0% 0% 0% / 40%)
+  );
+  --bg-opaque: light-dark(
+    rgba(96.078% 95.294% 94.118% / 92%),
+    rgba(0% 0% 0% / 92%)
+  );
+
+  --bg-base: light-dark(rgb(100% 100% 100%), rgb(10% 10% 10%));
+
+  --ui: light-dark(rgb(0% 48.81% 81.83%), rgb(73, 124, 253));
+  --ui-toner: light-dark(rgb(239, 244, 251), rgb(53, 61, 78));
+
+  --link: light-dark(#2c64c4, rgb(128, 157, 221));
+  --link-hover: light-dark(#4395f7, rgb(149, 182, 255));
+
+  --heavy-vishraam: light-dark(rgb(55.17% 30% 13.76%), rgb(198, 145, 110));
+  --medium-vishraam: light-dark(rgb(9.32% 42.55% 19.52%), rgb(127, 172, 128));
+  --light-vishraam: light-dark(rgb(53% 27.31% 53.51%), rgb(162, 149, 203));
+
+  ::selection {
+    background: light-dark('', rgb(95.76% 73.91% 23.13% / 0.4));
+  }
+}
+
+@media (dynamic-range: high) {
+  @supports (color: oklch(0 0 0)) {
+    :root {
+      --fg: light-dark(lch(4% 2 85), oklch(100% 0% 0));
+      --fg-muted: light-dark(lch(40% 2 85), oklch(66% 2% 25));
+
+      --bg: light-dark(lch(96% 2 85), oklch(0% 0% 0));
+      --bg-sheer: light-dark(lch(96% 2 85 / 4%), oklch(0% 0% 0 / 4%));
+      --bg-gauzy: light-dark(lch(96% 2 85 / 12%), oklch(0% 0% 0 / 12%));
+      --bg-hazy: light-dark(lch(96% 2 85 / 40%), oklch(0% 0% 0 / 40%));
+      --bg-opaque: light-dark(lch(96% 2 85 / 92%), oklch(0% 0% 0 / 92%));
+
+      --bg-base: light-dark(lch(100% 0 0), oklch(20% 0% 265));
+
+      --ui: light-dark(lch(50% 66 265), oklch(85% 100% 265));
+      --ui-toner: light-dark(lch(96% 4 265), oklch(36% 8% 265));
+
+      --link: light-dark(lch(40% 66 265), oklch(92% 16% 265));
+      --link-hover: light-dark(lch(60% 66 265), oklch(100% 20% 265));
+
+      --heavy-vishraam: light-dark(lch(40% 44 55), oklch(92% 16% 55));
+      --medium-vishraam: light-dark(lch(40% 44 145), oklch(92% 16% 145));
+      --light-vishraam: light-dark(lch(40% 44 295), oklch(92% 16% 295));
+    }
+
+    ::selection {
+      background: light-dark('', oklch(62% 50% 265 / 40%));
+    }
+  }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-    --toner: rgba(var(--black-rgb) / var(--alpha-8));
-    --fg-values: 8.33% 7.46% 5.52%;
-    --fg: rgb(var(--fg-values));
-    --fg-muted: rgb(57.57% 56.58% 54.63%);
-    --bg-values: 245, 243, 240;
-    --bg: rgb(var(--bg-values));
-    --bg-base-values: 100% 100% 100%;
-    --bg-base: rgb(var(--bg-base-values));
-    --ui: rgb(0% 48.81% 81.83%);
-    --ui-toner: rgb(0, 154, 255);
-    --link: #2c64c4;
-    --link-hover: #4395f7;
-    --heavy-vishraam: rgb(55.17% 30% 13.76%);
-    --medium-vishraam: rgb(9.32% 42.55% 19.52%);
-    --light-vishraam: rgb(53% 27.31% 53.51%);
-  }
-
-  @media (dynamic-range: high) {
-    @supports (color: oklch(0 0 0)) {
-      :root {
-        --fg-values: 4% 2 85;
-        --fg: lch(var(--fg-values));
-        --fg-muted: lch(40% 2 85);
-        --bg-values: 96% 2 85;
-        --bg: lch(var(--bg-values));
-        --bg-base-values: 100% 0 0;
-        --bg-base: lch(var(--bg-base-values));
-        --ui: lch(50% 66 265);
-        --ui-toner: lch(96% 4 265);
-        --link: lch(40% 66 265);
-        --link-hover: lch(60% 66 265);
-        --heavy-vishraam: lch(40% 44 55);
-        --medium-vishraam: lch(40% 44 145);
-        --light-vishraam: lch(40% 44 295);
-      }
-    }
+    color-scheme: light;
   }
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --toner: rgba(var(--white-rgb) / var(--alpha-8));
-    --fg: #ffffff;
-    --fg-muted: #aaaaaa;
-    --bg-values: 0, 0, 0;
-    --bg: rgb(var(--bg-values));
-    --bg-base-values: 37, 37, 37;
-    --bg-base: rgb(var(--bg-base-values));
-    --ui: rgb(73, 124, 253);
-    --link: rgb(128, 157, 221);
-    --link-hover: rgb(149, 182, 255);
-    --heavy-vishraam: rgb(198, 145, 110);
-    --medium-vishraam: rgb(127, 172, 128);
-    --light-vishraam: rgb(162, 149, 203);
+    color-scheme: dark;
   }
+}
 
-  ::selection {
-    background: rgb(95.76% 73.91% 23.13% / var(--alpha));
-  }
+[data-appearance='dark'] {
+  color-scheme: dark;
+}
 
-  img,
-  svg {
-    filter: saturate(0.8);
-  }
-
-  @media (dynamic-range: high) {
-    @supports (color: oklch(0 0 0)) {
-      :root {
-        --fg-base-values: 100% 0% 0;
-        --fg: oklch(var(--fg-base-values));
-        --fg-muted: oklch(66% 2% 25);
-        --bg-values: 0% 0% 0;
-        --bg: oklch(var(--bg-values));
-        /* skip bg until theme_color supports dynamic range */
-        --bg-base-values: 20% 0% 265;
-        --bg-base: oklch(var(--bg-base-values));
-        --ui: oklch(85% 100% 265);
-        --ui-toner: oklch(36% 8% 265);
-        --link: oklch(92% 16% 265);
-        --link-hover: oklch(100% 20% 265);
-        --heavy-vishraam: oklch(92% 16% 55);
-        --medium-vishraam: oklch(92% 16% 145);
-        --light-vishraam: oklch(92% 16% 295);
-      }
-
-      ::selection {
-        background: oklch(62% 50% 265 / 40%);
-      }
-    }
-  }
+[data-appearance='light'] {
+  color-scheme: light;
 }
 
 body {
