--- a/src/components/line/line.css
+++ b/src/components/line/line.css
@@ -31,7 +31,7 @@ p {
   line-height: 1.6;
 }
 
-.vicar {
+.viakhia {
   --font-size: 1.1;
   font-size: calc(1em * var(--font-size));
   /* font-weight: calc(600 / var(--font-size)); */
